--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,9 +8,11 @@ pipeline {
   stages {
     stage('Clean') {
       steps {
+       script{
         def dirToClean = 'java-maven-sonar-argocd-helm-k8s/spring-boot-app'
         sh "rm -rf ${dirToClean}/*"
         sh "ls -ltr ${dirToClean}"
+       }
       }
     }
     stage('Build and Test') {
